Defect-319031: fixed icon overlap issue.

--- a/media/my-css.css
+++ b/media/my-css.css
@@ -229,6 +229,7 @@ label {
     border-radius: unset;
     font-size: 13px !important;
     height: 2rem !important;
+    background: unset;
 }
 
 .dropdown-item {
